--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="PROJECT RAIL TIMETABLE BETA">
+        <meta name="description" content="PROJECT RAIL TIMETABLE ALPHA">
         <title>PROJECT RAILS INDEX</title>
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="/style/style.css"> 
 
     </head>
 
